CHANGES IN VERSION 1.11.6
-------------------------

CHANGES IN VERSION 1.11.5
-------------------------
 o Added data from Andreyev et al. 2009 <2016-08-31 Wed>
 
CHANGES IN VERSION 1.11.4
-------------------------
 o Normalise manual titles <2016-08-16 Tue>
 o Updated hyperLOPIT markers and goCC dataset <2016-08-22 Mon>

CHANGES IN VERSION 1.11.3
-------------------------
 o Added data from Stekhoven et al. 2014 <2016-08-12 Fri>
 
CHANGES IN VERSION 1.11.2
-------------------------
 o mv itzhak2016stcSILAC in right location <2016-08-10 Wed>
 
CHANGES IN VERSION 1.11.1
-------------------------
 o Added TL parameters for E15TG2a from Breckels et al. 2016 
   [2016-06-29 Wed]
 o Added hyperLOPIT2015goCC binary GO CC [2016-06-29 Wed]
 o Added data from Itzhak et al. 2016 <2016-08-10 Wed>

CHANGES IN VERSION 1.9.5
------------------------
 o Added data from Mulvey et al. 2015 <2016-04-04 Mon>
 
CHANGES IN VERSION 1.9.4
------------------------
 o Added the STRING-db tab delimitated PPI data for transfer learning
   example <2016-02-29 Mon>
 
CHANGES IN VERSION 1.9.3
------------------------
 o data unit tests <2016-02-09 Tue>
 
CHANGES IN VERSION 1.9.2
------------------------
 o fixed bug in E14TG2aS1 fData [2015-08-02 Mon] 

CHANGES IN VERSION 1.9.1
------------------------
 o added fraction information to hyperLOPIT data [2015-11-04 Wed] 
 o reverted fraction order, fixed bug in hyperLOPIT
   make script [2015-11-05 Thu]
 o Added fraction number order [2015-11-05 Thu]

CHANGES IN VERSION 1.9.0
------------------------
 o New version for Bio devel 3.3
 
CHANGES IN VERSION 1.8.0
------------------------
 o New version for Bio release 3.2
 
CHANGES IN VERSION 1.7.4
------------------------
 o new hyperLOPIT datasets on mouse stem cells
   [2015-10-07 Wed] 

CHANGES IN VERSION 1.7.3
------------------------
 o Fix typo in man pages [2015-09-08 Tue]
 
CHANGES IN VERSION 1.7.2
------------------------
 o added HPA, GOCC and YLOC datasets from Breckels et al 2015