@@ -1,6 +1,8 @@
 CHANGES IN VERSION 1.11.6
 -------------------------
-
+ o Add combined trotter2010 data and markers fcol <2016-09-02 Fri>
+ o Add data from Rodriguez-Pineiro et al. 2012 <2016-09-02 Fri>
+ 
 CHANGES IN VERSION 1.11.5
 -------------------------
  o Added data from Andreyev et al. 2009 <2016-08-31 Wed>
